<resources>
    <string name="app_name">MyBlog</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- modified by Tiny.Lan -->
    <string name="text_title_common">博客</string>
    <string name="btn_title_left_common">返回</string>
    <string name="btn_title_right_common">其他</string>

    <string name="btn_navigation_home">首页</string>
    <string name="btn_navigation_publish">发博客</string>
    <string name="btn_navigation_me">我自己</string>

    <string name="text_me_name_common">蓝天</string>
    <string name="text_me_id_common">123456</string>

    <string name="text_logout">退出当前账号</string>
    <string name="text_publish">发布新的博客</string>
    <string name="hint_edit_publish">请在此处编辑您的博客</string>
    <string name="text_publish_short">发博客</string>
    <string name="text_my">我的</string>
    <string name="text_my_blog">我的博客</string>
    <string name="text_login">登录</string>

    <string name="text_cancel">取消</string>
    <string name="edit_publish">发布博客</string>
    <string name="edit_publish_short">发布</string>

    <string name="edt_none">博客内容不能为空</string>
</resources>
