<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/gray_frame_just_bottom"
        android:paddingLeft="@dimen/title_bar_padding"
        android:paddingRight="@dimen/title_bar_padding">

        <Button
            android:id="@+id/btn_title_left"
            style="@style/title_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/btn_title_left_common" />

        <TextView
            android:id="@+id/text_title"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_title_common" />

        <Button
            android:id="@+id/btn_title_right"
            style="@style/title_right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/btn_title_right_common" />

    </RelativeLayout>

</LinearLayout>